--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "frontend:install": "cd reactnd-contacts-complete && npm install",
-    "backend:install": "cd reactnd-contacts-server && npm install",
-    "frontend:build": "cd reactnd-contacts-complete && npm run build",
-    "backend:build": "cd reactnd-contacts-server && npm run build",
-    "frontend:deploy": "cd reactnd-contacts-complete && npm run deploy"
+    "frontend:install": "cd MyStore && npm install",
+    "backend:install": "cd storefrontbackend && npm install",
+    "frontend:build": "cd MyStore && npm run build",
+    "backend:build": "cd storefrontbackend && npm run build",
+    "frontend:deploy": "cd MyStore && npm run deploy",
+    "backend:deploy": "cd storefrontbackend && npm run deploy"
   }
 }
