--- a/storefrontbackend/package.json
+++ b/storefrontbackend/package.json
@@ -11,7 +11,8 @@
     "start": "dir && npm install && node .",
     "build": "npx tsc",
     "jasmine":  "set ENV=test&&db-migrate --env test up&&jasmine&&db-migrate db:drop test",
-    "test": "npm run build && npm run jasmine"
+    "test": "npm run build && npm run jasmine",
+    "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
   },
   "author": "Udacity",
   "license": "ISC",
