--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
   aws-cli: circleci/aws-cli@1.3.1
+  aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@1.0.2
   # different jobs are calles later in the workflows sections
 jobs:
   build:
