--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.1
   aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@1.0.2
   # different jobs are calles later in the workflows sections
-dependencies:
-  pre:
-    - npm i -g db-migrate
 jobs:
   build:
     docker:
@@ -18,11 +15,13 @@ jobs:
       - checkout
       - aws-cli/setup
       - aws-elastic-beanstalk/setup
-      # install dependencies in both apps
+      # migrate the database
       - run:
           name: Migrate database
           command: |
+            npm i -g db-migrate
             npm run db:migrate
+      # install, build and deploy frontend
       - run:
           name: Install frontend
           command: |
@@ -35,6 +34,7 @@ jobs:
           name: Deploy frontend
           command: |
             npm run frontend:deploy
+      # install, build, deploy and test backend
       - run:
           name: Install backend
           command: |
