--- a/MyStore/package.json
+++ b/MyStore/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
