--- a/storefrontbackend/package.json
+++ b/storefrontbackend/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ./src/*/**.ts && eslint ./src/**.ts",
     "start": "dir && npm install && node .",
     "build": "npx tsc",
-    "jasmine":  "eb setenv ENV=test&&db-migrate --env test up&&db-migrate --env test down&&jasmine&&db-migrate db:drop test&&eb setenv ENV=dev",
+    "jasmine":  "set ENV=test&&db-migrate --env test up&&db-migrate --env test down&&jasmine&&db-migrate db:drop test",
     "test": "npm run build && npm run jasmine",
     "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
   },
