Set env for testing

--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "frontend:deploy": "cd MyStore && npm run deploy",
     "backend:deploy": "cd storefrontbackend && npm run deploy",
     "backend:test": "cd storefrontbackend && npm run test",
-    "db:migrate": "cd storefrontbackend && db-migrate up"
+    "db:migrate": "cd storefrontbackend && db-migrate --env dev up"
   }
 }
