Fix cicleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,6 @@ orbs:
   # different jobs are calles later in the workflows sections
 jobs:
   build:
-    filters:
-      branches:
-        only: master
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
@@ -62,4 +59,11 @@ jobs:
             AWS_DB_TEST_NAME=$AWS_DB_TEST_NAME AWS_DB_USER=$AWS_DB_USER AWS_DB_PASSWORD=$AWS_DB_PASSWORD \
             ENV=dev BCRYPT_PASSWORD=$BCRYPT_PASSWORD SALT_ROUNDS=$SALT_ROUNDS JWT_PASSWORD=$JWT_PASSWORD \
             port=$port
+workflows:
+  build-deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
 
