--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ jobs:
       - run:
           name: Set enviroment variables
           command: |
+            cd storefrontbackend
             eb setenv AWS_DB_HOST=$AWS_DB_HOST AWS_DB_NAME=$AWS_DB_NAME AWS_DB_USER=$AWS_DB_USER \
             AWS_DB_TEST_NAME=$AWS_DB_TEST_NAME AWS_DB_USER=$AWS_DB_USER AWS_DB_PASSWORD=$AWS_DB_PASSWORD \
             ENV=dev BCRYPT_PASSWORD=$BCRYPT_PASSWORD SALT_ROUNDS=$SALT_ROUNDS JWT_PASSWORD=$JWT_PASSWORD \
